--- a/Extension/popup/success.html
+++ b/Extension/popup/success.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Resume Has Been Uploaded</title>
+    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
-<h1>Success</h1>
+  <div id="popup-container" class="container">
+        <img src="../assets/background.png.png" id="logo" alt="Logo" class="logo">
+       <h1>Your Resume has been uploaded</h1>
+    </div>
 </body>
 </html>
